Refactor stylesheets of navigation-timing-api

--- a/apis/navigation-timing-api/index.html
+++ b/apis/navigation-timing-api/index.html
@@ -10,15 +10,15 @@
     <div id="wrapper">
         <div id="content">
           <p><h1>Eterno Retorno</h1></p>
-          <p>Eterno Retorno é um conceito desenvolvido pelo filósofo Friedrich Nietzsche (1844-1900), considerado por ele próprio um dos seus pensamentos mais aterrorizadores. Foi durante um passeio em 1881 que Nietzsche refletiu sobre os sentidos das vivências em alternâncias que se “repetem”. Embora em várias de suas obras encontramos pistas do que seria o Eterno Retorno, é na sua obra A Gaia Ciência (1882).
+          <p>Eterno Retorno é um conceito desenvolvido pelo filósofo Friedrich Nietzsche (1844-1900), considerado por ele próprio um dos seus pensamentos mais aterrorizadores. Foi durante um passeio em 1881 que Nietzsche refletiu sobre os sentidos das vivências em alternâncias que se “repetem”. Embora em várias de suas obras encontramos pistas do que seria o Eterno Retorno, é na sua obra A Gaia Ciência (1882) que ele escreve uma passagem marcante referente ao assunto.
           “A eterna ampulheta da existência será sempre virada outra vez – e tu com ela, poeirinha da poeira!”
           </p>
-
+          <br>
+          <br>
         </div>
     </div>
-
     <div id="extra">
-      <p><strong>Quanto tempo tem que aqui retornas?</strong></p>
+      <p><strong>Há quanto tempo você pensa no seu tempo de navegação nesse espaço? </strong> Nesse site...</p>
       <div id="tempos">
           <p id="connectionTime"></p>
           <p id="loadingTime"></p>
@@ -26,6 +26,7 @@
       </div>
       <script src='./scripts/example.js'></script>
     </div>
+
 
   </div>
 
