Change push-api theme

--- a/apis/push/index.html
+++ b/apis/push/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Fila do Iphone</title>
+  <title>Ewige Wiederkunft</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
@@ -16,11 +16,11 @@
 <body>
 
   <header>
-    <h1>Fila do Iphone</h1>
+    <h1>Ewige Wiederkunft</h1>
   </header>
 
   <main>
-    <p>Aguarde sua vez para poder comprar seu iphone, para ser notificado, ative suas notificações.</p>
+    <p>Aguarde a sua vez para entrar no vórtex do retorno</p>
     <p>
       <button disabled class="js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
         Ativar Push Messaging
